Refactor word prompts to constants and expose Doubao request options